feat: add markdown export for diagnosis and comparison
Adds --export-diagnosis CLI flag to save a diagnosis as a formatted
markdown file, plus POST export endpoints for both diagnosis and
comparison that the new web UI buttons call, saving files to
~/Documents/TowerAnalyzer/.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>